# music-ocean-bot

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  deezer_test.py  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
app/: __main__.py
app/bot/: constants.py
app/bot/callbacks/: admin_panel_callback.py  default_engine_callback.py  locales_callback.py  mailing_callback.py  main_menu_callback.py  settings_callback.py  setup_scrobbling_callback.py  track_previews_callback.py
app/bot/keyboards/: __init__.py  admin_panel_keyboard.py  engines_keyboard.py  entity_keyboard.py  guide_keyboard.py  home_keyboard.py  locales_keyboard.py  mailing.py  profile_keyboard.py  scrobbling.py  settings_keyboard.py  track_info_keyboard.py  track_preview_keyboard.py
app/bot/middlewares/: __init__.py  database_middleware.py  locale_middleware.py  main_middleware.py
app/bot/utils/: __init__.py  admin_notify.py  context_codes.py  generate_inline_results.py  get_engine_emoji.py  get_lastfm_auth_url.py  get_spotify_auth_url.py  save_track.py  search_results.py  selected_option.py  stats_banner.py
app/config/: log.py  settings.py
app/database/: core.py  migrations.py
app/database/models/: __init__.py  base.py  base_track.py  deezer_track.py  download_context.py  dynamic_settings.py  pydantic_model.py  soundcloud_track.py  spotify_track.py  track.py  user.py  yandex_track.py  youtube_track.py
app/database/repositories/: __init__.py  dynamic_settigns_repository.py  track_repository.py  user_repository.py
app/di/: container.py  providers.py
app/locales/en/: main.ftl
app/locales/pl/: main.ftl
app/locales/ru/: main.ftl
app/locales/uk/: main.ftl
app/modules/musicocean/: __init__.py  client.py  (+1 more)
app/musicocean/: client.py  enums.py
app/server/: __main__.py  callback_endpoint.py
scripts/: dl.py
tests/: conftest.py  test_deezer_models.py  test_enums.py  test_exceptions.py  test_link_regex.py  test_not_supported_result.py  test_spotify_client.py  test_spotify_models.py  test_utils.py
(+197 files in other folders)
