[project]
name = "music-ocean-bot"
version = "0.1.0"
description = "meow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.25.0",
    "aiohttp~=3.12.15",
    "asyncpg>=0.31.0",
    "av>=16.1.0",
    "brotli>=1.2.0",
    "curl-cffi>=0.14.0",
    "dishka~=1.7.2",
    "playwright>=1.55.0",
    "pycryptodome~=3.23.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pytubefix>=10.3.8",
    "rich~=14.2.0",
    "spotipy>=2.25.2",
    "sqlalchemy~=2.0.44",
    "ytmusicapi>=1.11.5",
]
