[project]
name = "music-ocean-bot"
version = "0.1.0"
description = "meow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.26.0",
    "aiogram-i18n>=1.5",
    "aiohttp~=3.12.15",
    "asyncpg>=0.31.0",
    "av>=16.1.0",
    "beautifulsoup4>=4.14.3",
    "brotli>=1.2.0",
    "curl-cffi>=0.14.0",
    "dishka~=1.7.2",
    "fluent-runtime>=0.4.0",
    "mutagen>=1.47.0",
    "pycryptodome~=3.23.0",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pytubefix>=10.3.8",
    "seaborn>=0.13.2",
    "shazamio>=0.8.1",
    "sqlalchemy~=2.0.44",
    "yandex-music[async]>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
